--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -83,9 +83,12 @@ input:focus {
     margin-top: 6vw;
 }
 .todo {
-    grid-row: 2;
+    grid-row: 3;
     grid-column: 2/12;
+    display: flex;
+    flex-direction: column;
 }
+
 
 .todoList {
     padding: 0 0 20px 20px;
